--- a/class-2-selectors_and_combinators/second.html
+++ b/class-2-selectors_and_combinators/second.html
@@ -7,7 +7,8 @@
   <title>Class-2</title>
 </head>
 <body>
-<div>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio, officia.</p>
+  <div>
   <p>this is direct member of div tag</p>
   <p>this is direct member of div tag</p>
   <p>this is direct member of div tag</p>
@@ -25,5 +26,8 @@
   <p>this is third</p>
   <p>this is fourth</p>
 </div>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, deleniti.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, deleniti.</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, deleniti.</p>
 </body>
 </html>
